--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
   "dependencies": {
     "@popperjs/core": "^2.4.0",
     "classnames": "^2.2.6",
-    "@xavierraffin/react-slidedown": "^2.4.6",
+    "@xavierraffin/react-slidedown": "github:xavierraffin/react-slidedown",
     "resize-observer-polyfill": "^1.5.1"
   }
 }
